--- a/render.yaml
+++ b/render.yaml
@@ -1,7 +1,7 @@
 services:
   - type: web
-    name: "taxi-maarssen"
+    name: city-taxi-maarssen
     env: php
-    buildCommand: "composer install --no-dev --optimize-autoloader"
-    startCommand: "vendor/bin/heroku-php-apache2 public/"
     plan: free
+    buildCommand: "composer install --no-dev --optimize-autoloader"
+    startCommand: "php artisan serve --host 0.0.0.0 --port 10000"
